--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,13 +30,13 @@ jobs:
   upload:
     name: Upload artifact
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
 
     - run: mkdir -p artifact
 
     - run: echo hello > artifact/world.txt
 
-    - uses: actions/upload-artifact@master
+    - uses: actions/upload-artifact@v2
       with:
-        name: gopal
+        name: lotto
         path: artifact
